--- a/index.html
+++ b/index.html
@@ -132,7 +132,25 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
       </div>
     </div>
   </section>
-
+<section id="location" class="card">
+  <h2>Joylashgan joy</h2>
+  <p style="text-align:center;font-size:18px;margin-bottom:25px">
+    Bizning manzil: Samarqand shahri, Olimpiya va Paralimpiya sport turlari markazi
+  </p>
+  <iframe
+    src="https://www.google.com/maps?q=39.663882,66.935125&hl=uz&z=16&output=embed"
+    width="100%" height="450"
+    style="border:0;border-radius:18px"
+    allowfullscreen=""
+    loading="lazy">
+  </iframe>
+</section>
+<section id="news" class="card">
+  <h2>Yangiliklar</h2>
+  <p style="text-align:center;font-size:18px;opacity:0.8">
+    Hozircha yangiliklar mavjud emas.
+  </p>
+</section>
   <section id="about" class="card">
     <h2 data-tr="about">Biz haqimizda</h2>
     <div style="background:rgba(11,97,179,0.08);padding:35px;border-radius:22px;border-left:8px solid var(--blue);font-size:18.5px;line-height:2.1">
