--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
   <p style="text-align:center;font-size:18px;opacity:0.8"
     </section>  <!-- Joylashgan joy tugashi shu -->
   
-<!-- 🔽 Shu yerdan boshlab yangi kodni qo‘ying -->
 <section id="news" class="card">
+  <h2>Yangiliklar</h2>
+
   <div class="news-item" style="background:#fff;border-radius:22px;box-shadow:0 6px 25px rgba(0,0,0,0.1);overflow:hidden">
     <div class="news-cover" style="position:relative">
       <img src="assets/photo_2025-11-10_20-05-18.jpg" alt="Yangilik rasmi" style="width:100%;max-height:500px;object-fit:cover">
@@ -200,7 +201,8 @@ document.getElementById('lightbox').addEventListener('click',()=>{
   document.getElementById('lightbox').style.display='none';
 });
 </script>
-  </p>
+
+</p>
 </section>
   <section id="about" class="card">
     <h2 data-tr="about">Biz haqimizda</h2>
