Update image gallery in index.html

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
       </p>
 
       <!-- Rasmlar galereyasi -->
-      <div class="gallery" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:15px">
-        <img src="assets/photo_2025-11-10_20-05-19 (2).jpg" class="gallery-img">
-        <img src="assets/photo_2025-11-10_20-05-19 (3).jpg" class="gallery-img">
-        <img src="assets/photo_2025-11-10_20-05-19.jpg" class="gallery-img">
-        <img src="assets/photo_2025-11-11_17-36-48.jpg" class="gallery-img">
+     <img src="./assets/photo_2025-11-10_20-05-18.jpg" alt="Yangilik rasmi">
+<img src="./assets/photo_2025-11-10_20-05-19 (2).jpg" class="gallery-img">
+<img src="./assets/photo_2025-11-10_20-05-19 (3).jpg" class="gallery-img">
+<img src="./assets/photo_2025-11-10_20-05-19.jpg" class="gallery-img">
+<img src="./assets/photo_2025-11-11_17-36-48.jpg" class="gallery-img">
       </div>
     </div>
   </div>
