--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
   </iframe>
 </section>
 <section id="news" class="card">
+  <h2>Yangiliklar</h2>
  
 </section>
   <section id="about" class="card">
