--- a/index.html
+++ b/index.html
@@ -89,12 +89,88 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
 .telegram:hover{background:#0088cc !important}
 .instagram:hover{background:#E4405F !important}
 @media(max-width:768px){
-  body{background-size:340px auto;background-position:center 110px}
-  .hero-title{font-size:38px}
-  .hero-sub{font-size:19px}
-  ul.sports{columns:1}
-  .nav{gap:12px;font-size:15px}
+
+  /* Umumiy */
+  body{
+    background-size:280px auto;
+    background-position:center 120px;
+    padding-top:0;
+  }
+
+  /* Header */
+  .header{
+    padding:16px 0 22px;
+    text-align:center;
+  }
+  .brand{
+    flex-direction:column;
+    justify-content:center;
+    text-align:center;
+  }
+  .brand img{
+    width:70px;height:70px;
+    margin-bottom:8px;
+  }
+  .brand div{
+    font-size:20px;
+  }
+  .brand div+div{
+    font-size:13px;
+  }
+
+  /* Navigatsiya */
+  .nav{
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:10px;
+    margin-top:10px;
+  }
+  .nav a{
+    font-size:15px;
+  }
+  .lang-btn{
+    padding:6px 12px;
+    font-size:14px;
+    border-radius:10px;
+  }
+
+  /* Hero (asosiy sarlavha) */
+  .hero{
+    padding:60px 10px 40px;
+  }
+  .hero-left{
+    padding:35px 25px;
+    border-radius:20px;
+  }
+  .hero-title{
+    font-size:30px;
+    margin-bottom:15px;
+  }
+  .hero-sub{
+    font-size:17px;
+    line-height:1.6;
+  }
+
+  /* Contact qismi */
+  .contact-line{
+    font-size:17px;
+    margin:25px 0;
+  }
+
+  /* Kartalar orasi masofa */
+  .card{
+    padding:28px 18px;
+    border-radius:20px;
+  }
+
+  /* Footer */
+  .social-btn{
+    padding:12px 35px;
+    font-size:18px;
+    margin:10px 10px;
+  }
 }
+
 </style>
 </head>
 <body>
