--- a/index.html
+++ b/index.html
@@ -223,7 +223,28 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
 </section>
 <section id="news" class="card">
   <h2>Yangiliklar</h2>
- 
+ <div class="news-grid">
+
+  <article class="news-item">
+    <img src="photo_2025-11-11_17-36-48.jpg" alt="Tibbiyot xodimlari kuni tadbiri">
+    <div class="news-content">
+      <div class="news-date">11 noyabr 2025</div>
+      <h3>Tibbiyot xodimlari va kasaba uyushmalari kuni nishonlandi</h3>
+      <p>
+        Tibbiyot xodimlari kuni, 10-noyabr xalqaro Bugalteriya kuni va O‘zbekiston kasaba uyushmalari harakatining
+        120 yilligi hamda 11-noyabr O‘zbekiston kasaba uyushmalari kuni munosabati bilan markaz xodimlari
+        taqdirlandi. Tadbirda faol tibbiyot xodimlari, buxgalterlar hamda kasaba uyushma a’zolari faxriy yorliqlar
+        va esdalik sovg‘alari bilan taqdirlandilar.
+      </p>
+      <div style="margin-top:10px;display:flex;gap:10px;flex-wrap:wrap;">
+        <img src="photo_2025-11-10_20-05-19 (3).jpg" alt="Taqdirlash marosimi" style="width:48%;border-radius:12px;object-fit:cover;">
+        <img src="photo_2025-11-11_17-36-48.jpg" alt="Tadbir jarayoni" style="width:48%;border-radius:12px;object-fit:cover;">
+      </div>
+    </div>
+  </article>
+
+</div>
+
 </section>
   <section id="about" class="card">
     <h2 data-tr="about">Biz haqimizda</h2>
