Fix image tag in news section of index.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
  <div class="news-grid">
 
   <article class="news-item">
-    <img src="photo_2025-11-11_17-36-48.jpg" alt="Tibbiyot xodimlari kuni tadbiri">
+   "Tibbiyot xodimlari kuni tadbiri">
     <div class="news-content">
       <div class="news-date">11 noyabr 2025</div>
       <h3>Tibbiyot xodimlari va kasaba uyushmalari kuni nishonlandi</h3>
