--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ ul.sports li:before{content:"▸";color:var(--green);position:absolute;left:0;fo
   </iframe>
 </section>
 <section id="news" class="card">
+  <h2>Yangiliklar</h2>
  <div class="news-grid">
 
   <article class="news-item">
